--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,1 +1,328 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title> Resume </title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+<link rel="stylesheet" type="text/css"  href="resume.css">
+</head>
+
+
+<body>
+
+<div class="container">
+
+     <div class="left_side"> 
+	 <div class="prpofiletext">
+	   <div class="imgbx">
+	    <img src="C:\Users\hp\Downloads\Ash.jpg" height="233px">
+	   </div>
+	    <h2>Ashwini Nile<br> <span>Web Developer</span></h2>
+	  </div>
+	     
+	  <div class="contactinfo">
+	    <h3 class="title">Contact Information</h3>
+	    <ul>
+		<li> 
+		 <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+		 <span class="text"> +91 937 376 9588 </span>
+		</li>
+		<li> 
+		 <span class="icon"> <i class="fa fa-envelope-o" aria-hidden="true"></i> </span>
+		 <span class="text"> nileashwini15@gmail.com </span>
+		</li>
+		<li> 
+		 <span class="icon"> <i class="fa fa-globe" aria-hidden="true"></i> </span>
+		 <span class="text"> mywebsite </span>
+		</li>
+		<li> 
+		 <span class="icon"> <i class="fa fa-linkedin" aria-hidden="true"></i> </span>
+		 <span class="text"> linkedin.com/in/ashwini-nile-a63a001b7 </span>
+		</li>
+		<li> 
+		 <span class="icon"> <i class="fa fa-skype" aria-hidden="true"></i> </span>
+		 <span class="text"> live:.cid.40a53fe08b8b31c0 </span>
+		</li>
+		<li> 
+		 <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i> </span>
+		 <span class="text"> The Nook, Tathawade, Pune- 411033  </span>
+		</li>
+	    </ul>
+	  </div>
+
+	  <div class="contactinfo language">
+	    <h3 class="title">Languges</h3>
+	    <ul>
+		<li> 
+		 <span class="text"> English </span>
+		 <span class="percent"> <div style="width:70%">  </div></span>
+		 
+		</li>
+		<li> 
+		 <span class="text">Hindi</span>
+		 <span class="percent"> <div style="width:80%">  </div></span>
+		</li>
+		<li> 
+		 <span class="text">Marathi</span>
+		 <span class="percent"> <div style="width:90%">  </div> </span>
+		</li>
+	    </ul>
+	  </div>
+
+	  
+	  <div class="contactinfo language">
+	    <h3 class="title">professional skills</h3>
+	    <ul>
+		<li> 
+		 <span class="text"> C</span>
+		 <span class="percent"> <div style="width:65%">  </div></span>
+		 
+		</li>
+		<li> 
+		 <span class="text">C++</span>
+		 <span class="percent"> <div style="width:55%">  </div></span>
+		</li>
+		<li> 
+		 <span class="text">Python</span>
+		 <span class="percent"> <div style="width:70%">  </div> </span>
+		</li>
+		<li> 
+		 <span class="text">HTML</span>
+		 <span class="percent"> <div style="width:85%">  </div> </span>
+		</li>
+		<li> 
+		 <span class="text">CSS</span>
+		 <span class="percent"> <div style="width:45%">  </div> </span>
+		</li>
+		<li> 
+		 <span class="text">Manual testing</span>
+		 <span class="percent"> <div style="width:50%">  </div> </span>
+		</li>
+		<li> 
+		 <span class="text">Embedded C</span>
+		 <span class="percent"> <div style="width:60%">  </div> </span>
+		</li>
+	    </ul>
+	  </div>
+
+
+<div class="contactinfo language">
+	    <h3 class="title">ACTIVITIES</h3>
+	    <ul>
+		<li> 
+		 <span class="text">NSS Volunteer </span>
+		</li>
+		<li> 
+		 <span class="text">Rotract Club of RSCOE volunteer</span>
+		</li>
+	    </ul>
+	  </div>
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <d<div class="right_side">      
+    <div class="about">
+      <h2 class="title2">Profile</h2> 
+      <p>A meticulous and organized individual seeking an Entry-level position in the field of Project Management. Skilled at developing reports, analyzing data, and identifying solutions. Strong ability to handle complex projects. Innovative, creative, and willing to contribute ideas and learn new things.</p>	
+    </div>
+    <div class="about">
+      <h2 class="title2">Education</h2> <hr>
+	<div class="box">
+	 <div class="year_clg">
+	   <h5>2019-Present</h5>
+	   <h5> course </h5> 
+	 </div>
+	 <div class="text">
+	   <h4>B.Tech</span></h4>
+	   <p>ELECTRONICS AND TELECOMMUNICATION <br> JSPMs Rajarshi Shahu college of engineering, Pune.<br> With aggregate of 80.03%.</p>
+	 </div>
+	</div>
+	
+	<div class="box">
+	 <div class="year_clg">
+	   <h5>2018-2019</h5>
+	   <h5> Institute</h5> 
+	 </div>
+	 <div class="text">
+	   <h4>HSC </h4>
+	   <p>Yogeshwari College, Ambajogai. <br> With aggregate of 71.08%.  </p>
+	 </div>
+	</div>
+	
+	<div class="box">
+	 <div class="year_clg">
+	   <h5>2016-2017</h5>
+	   <h5> Institute </h5> 
+	 </div>
+	 <div class="text">
+	   <h4>SSC </h4>
+	   <p> Shree Someshwar Kanya Prashala, Ghatnandur. <br> With aggregate of 86.60%.</p>
+	 </div>
+	</div><br>
+
+
+
+	<div class="about">
+      <h2 class="title2">PERSONAL Project</h2>  <hr>
+	<div class="box">
+	 <div class="year_clg">
+	   <h5>11/2019-03/2022</h5>
+	   <!-- <h5> Project description </h5> -->
+	 </div>
+	 <div class="text">
+	   <h4>Smart Robot Car </h4>
+	   <p> <span style="color:#848c90;" style="color:#848c90;" >PROJECT DESCRIPTION:</span> The smart robot car which has functions like obstacle avoidance, line tracing, infrared remote control, Bluetooth remote control. </p>
+	 </div>
+	</div>
+	
+	<div class="box">
+	 <div class="year_clg">
+	   <h5>08/2020 - 12/2020</h5>
+	 <!--  <h5> Project description </h5>  -->
+	 </div>
+	 <div class="text">
+	   <h4>Height Measuring Instrument.</h4>
+	   <p> <span style="color:#848c90;" style="font-size:16px;"    >PROJECT DESCRIPTION:</span> The project is based on embedded system. It is based on Arduino and HC-SR04 Ultrasonic sensor. </p>
+	 </div>
+	</div>
+	
+	<div class="box">
+	 <div class="year_clg">
+	   <h5>08/2022</h5>
+	  
+	 </div>
+	 <div class="text">
+	   <h4>Responsive Website </h4>
+	   <p> <span style="color:#848c90;">PROJECT DESCRIPTION:</span> In this project I have created my resume using HTML and CSS.  </p>
+	 </div>
+	</div>
+    </div>
+
+
+
+	
+
+
+
+
+	<div class="about">
+	  <h2 class="title2">CERTIFICATES</h2> <hr>
+	 <div class="certificates">
+	    <ul>
+		<li> 
+		• Employability Skill Development(ESD) Program by Zensar Technology.
+		</li>
+		<li> 
+		• Tcs ion career Edge-Young Professional.
+		</li>
+		<li> 
+		• The Arduino Platform and C Programming.
+		</li>
+		<li> 
+		• Front End Development - HTML
+		</li>
+		<li> 
+		• Front End Development - CSS
+		</li>
+		<li> 
+		• MATLAB Onramp.
+		</li>
+	    </ul>
+	  </div>
+	 </div>
+
+
+
+<div class="about">
+	  <h2 class="title2">INTERESTS</h2> <hr>
+	 <div class="certificates">
+	    <ul>
+		<li> 
+		• Programming
+		</li>
+		<li> 
+		• Events management and
+leading team.
+		</li>
+		<!-- <li> 
+		• The Arduino Platform and C Programming.
+		</li>  -->
+		 
+		
+	    </ul>
+	  </div>
+	 </div>
+
+
+
+      <div class="about intrest ">
+	<div class="intres"> 
+      <h2 class="title2">HOBBIES</h2> <hr>
+	<ul>
+	<li> <i class="fa fa-microphone" aria-hidden="true"></i> Singing</li>
+	<li> <i class="fa fa-cutlery" aria-hidden="true"></i> Cooking </li>
+	<li> <i class="fa fa-music" aria-hidden="true"></i> Music</li>
+	<li> <i class="fa fa-gamepad" aria-hidden="true"></i> Playing Chess</li>
+	</ul>
+	</div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+ </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+</body>
+
+</html>
